--- a/htmlCssJs/test/css/04_cssTest.css
+++ b/htmlCssJs/test/css/04_cssTest.css
@@ -93,7 +93,7 @@ input:focus {
 } */
 
 
-
+/* 
 .stripes div:nth-child(2n+1) {
     background-color: navy;
     color: white;
@@ -101,4 +101,33 @@ input:focus {
 
 .stripes div:nth-child(2n) {
     background-color: yellow;
+} */
+
+
+
+/* ::before */
+div.box::before {
+    content: "택시";
+}
+
+/* ::after */
+div.box::after {
+    content: "빨리";
+}
+
+
+
+
+
+
+input[disabled] {
+    background-color: red;
+}
+
+[placeholder="이름"] {
+    background-color: orange;
+}
+
+input:not([placeholder]) {
+    background-color: blue;
 }
