--- a/htmlCssJs/test/css/headerTest.css
+++ b/htmlCssJs/test/css/headerTest.css
@@ -4,7 +4,7 @@
  * @format
  */
 
-* {
+ * {
   box-sizing: border-box;
   font-size: 20px;
   font-weight: 700;
@@ -27,20 +27,30 @@ h1 {
 
 header {
   width: 100%;
-  height: 100px;
+  height: 60px;
   background-color: #ddd;
   padding: 0 20px;
   margin-bottom: 50px;
 }
 
+
 /* header1 */
 .header1 {
-  
+  display: flex;
+  justify-content: space-between; 
+  align-items: center;
+}
+.header1 .menus {
+  display: flex;
+}
+.header1 > .menus > li {
+  margin-left: 20px;
 }
 
 /* header2 */
 .header2 {
-
+  display: flex;
+  align-items: center;
 }
 
 /* header3 */
