--- a/htmlCssJs/alone_test.css
+++ b/htmlCssJs/alone_test.css
@@ -105,7 +105,7 @@ table {
     background-color: rgb(233, 233, 233);
 }
 
-.writeBox .writeDate .div {
+.writeBox .writeDate  {
     border: 1px solid red;
 }
 
