--- a/node_backend/04-file-upload-prac/views/index.ejs
+++ b/node_backend/04-file-upload-prac/views/index.ejs
@@ -4,23 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>실습 파일 업로드</title>
+
+    <!-- axios cdn -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
     <h4>파일 업로드 실습</h4>
-    <form action="/upload" method="post" enctype="multipart/form-data">
-        아이디 <input type="text" name="id" />
+    <form action="/upload" method="POST" enctype="multipart/form-data" name="sign-up">
+        아이디 <input type="text" name="id" placeholder="아이디" value="yeonju1"/>
         <br />
-    	비밀번호 <input type="password" name="pw" />
+    	비밀번호 <input type="password" name="pw" placeholder="비밀번호" value="1234"/>
         <br />
-        이름 <input type="text" name="name" />
+        이름 <input type="text" name="name" placeholder="이름" value="연주"/>
         <br />
-        나이 <input type="text" name="age" />
+        나이 <input type="text" name="age" placeholder="나이" value="27"/>
         <br />
         <input type="file" name="userfile">
         <br /> <br />
         <button type="submit">회원가입</button>
-        <button type="button" onclick="">(동적 폼 전송)회원가입</button>
+        <button type="button" onclick="dynamicFileUpload()">(동적 폼 전송)회원가입</button>
     </form>
+    <div id="dynamicFile"></div>
+
+    <script>
+
+        function dynamicFileUpload() {
+            const form = document.forms["sign-up"];
+            const data = new FormData();
+            data.append("id", form.id.value);
+            data.append("pw", form.pw.value);
+            data.append("name", form.name.value);
+            data.append("age", form.age.value);
+            data.append("userfile", file.files[0]);
+
+            axios({
+                method: "POST",
+                url: "/upload",
+                data: data,
+                headers: {
+                    "Content-type": "multipart/form-data",
+                }
+            }).then((res) => {
+                const result = document.getElementById("dynamicFile")
+                result.innerHTML = 
+                `
+                <img src="/${res.data.src}" />
+                <h3>경  ${res.data.name} 가입  축</h3>
+                <br /><br />
+                <p>아이디 : ${res.data.id}</p>
+                <p>비밀번호 : ${res.data.pw}</p>
+                <p>${res.data.name} (${res.data.age})</p>
+                `
+            })
+        };
+
+    </script>
 
 
 </body>
