--- a/node_backend/06-mvc-mysql-prac/views/index.ejs
+++ b/node_backend/06-mvc-mysql-prac/views/index.ejs
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h2></h2>
-    <a href="/visitors">방명록으로 이동하기</a>  <!--get요청 주소-->
+    안녕하세요
 </body>
 </html>
