--- a/react-proj/05-style/src/styles/origin.scss
+++ b/react-proj/05-style/src/styles/origin.scss
@@ -7,6 +7,8 @@
 //     width: calc(100vw - 100px);
 // }
 
+@import "./media";
+
 $color-main: red;
 
 // style 코드 블록을 @mixin을 이용하여 함수처럼 하나로 묶어두고,
@@ -75,3 +77,24 @@ $color-main: red;
     }
   }
 }
+
+// 태블릿일 때는 768px
+@mixin tablet {
+  @media screen and (max-width: 768px) {
+    @content;
+  }
+}
+// @mixin : css에서 묶어두고 싶은 코드블록 정의할 때 사용 
+// @include : 정의한 mixin을 사용할 때 
+
+//@content : 정의할 때 @content 키워드 적은 곳 - 사용할 때, 중괄호 안에 적은 내용 
+
+@include tablet {
+  .origin-sass {
+    display: block;
+  }
+}
+
+
+// 핸드폰일 때는 500px 
+
